# armor_detector_openvino

./: CMakeLists.txt  package.xml
config/: armor_detector.yaml
include/armor_detector_openvino/: ThreadPool.h  detector_openvino.hpp  detector_openvino_node.hpp  light_corner_corrector.hpp  mono_measure_tool.hpp  types.hpp
launch/: armor_detector_launch.py
src/: light_corner_corrector.cpp  mono_measure_tool.cpp  openvino_detector.cpp  openvino_detector_node.cpp
